	+ dos                 - shell (cmd) command execution 
	+ win64               - determine whether Windows x64 version of Scilab
	+ istssession         - determine if scilab is launched from a ms terminal service session.
	+ getsystemmetrics    - retrieves the specified system metric or system configuration setting.
	+ createGUID          - creates a Globally Unique IDentifier (GUID)


History manager:
================
 - New functions:
	+ displayhistory          - displays current scilab history
	+ addhistory              - add lines to current history
	+ saveconsecutivecommands - Save consecutive duplicate commands
	+ saveafterncommands      - Save the history file after n statements are added to the file.
	+ gethistoryfile          - get filename used for scilab's history
	+ sethistoryfile          - set filename for scilab history
	+ removelinehistory       - remove the Nth line in history.
	+ historysize             - get number of lines in history
	+ historymanager          - enable or disable history manager

 - Rewrite:
	+ loadhistory
	+ savehistory
	+ gethistory
	+ resethistory


Consoles:
=========
 - Based on a joint project Artenum ( http://www.artenum.com ) - INRIA/Scilab called Jrosetta
 - Completion
	+ Functions
	+ Variables
	+ Paths
 - Advanced completion also available in NW & NWNI modes

Modules/toolboxes template:
===========================
 - A template model has been defined to normalize how modules and toolboxes 
	should be.
	+ See http://wiki.scilab.org/Scilab_Module_Architecture for module
	+ See contrib/toolbox_skeleton/ for toolboxes


Source reorganisation:
======================
 - Source code split into dedicated and clear modules
 - Clear separation between the Scilab gateway (argument management, etc) and 
	the code
 - Use XML declaration for the list of functions
 - Use XML declaration for the list of modules (and activation or not)
 - Massive cleanup of the code 
 - Thousand of warnings removed
 - First step to a future Scilab API
