@@ -2,3 +2,7 @@ LIBRARY    scilocalization.dll
 
 
 EXPORTS
+setlanguage
+getlanguage
+getLanguageFromAlias
+isValidLanguage
