@@ -1,0 +1,27 @@
+/*
+* Scilab ( http://www.scilab.org/ ) - This file is part of Scilab
+* Copyright (C) 2008 - DIGITEO - Allan CORNET
+* 
+* This file must be used under the terms of the CeCILL.
+* This source file is licensed as described in the file COPYING, which
+* you should have received as part of this distribution.  The terms
+* are also available at    
+* http://www.cecill.info/licences/Licence_CeCILL_V2-en.txt
+*
+*/
+
+/*--------------------------------------------------------------------------*/ 
+
+#ifndef __SAVELANGUAGEPREF_H__
+#define __SAVELANGUAGEPREF_H__
+
+#include "BOOL.h"
+
+/**
+* save language in preference file (SCIHOME/.language)
+* @returns TRUE or FALSE
+*/
+BOOL saveLanguagePref(void);
+
+#endif /* __SAVELANGUAGEPREF_H__ */
+/*--------------------------------------------------------------------------*/ 
